--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -1,14 +1,13 @@
 <div id="log-in" fxFlexFill fxLayout="column" fxLayoutAlign="center center">
 
-  <div id="log-in-form" class="mat-elevation-z2">
+  <div id="form" class="mat-elevation-z2">
 
-    <div class="title">Iniciar sesión</div>
+    <div class="form-title">Iniciar sesión</div>
 
-    <form name="logInForm" [formGroup]="logInForm" (ngSubmit)="signIn()">
+    <form name="logInForm" [formGroup]="logInForm" (ngSubmit)="logIn()">
 
       <mat-form-field fxFlexFill>
-        <input matInput type="email" [placeholder]="'Correo electrónico'" #email name="email" formControlName="email"
-          required />
+        <input matInput type="email" [placeholder]="'Correo electrónico'" formControlName="email" required />
         <mat-error *ngIf="logInForm.controls.email.hasError('required')">
           Campo requerido.
         </mat-error>
@@ -18,24 +17,23 @@
       </mat-form-field>
 
       <mat-form-field fxFlexFill>
-        <input matInput type="password" [placeholder]="'Contraseña'" #password name="password"
-          formControlName="password" required />
+        <input matInput type="password" [placeholder]="'Contraseña'" formControlName="password" required />
         <mat-error>
           Campo requerido.
         </mat-error>
       </mat-form-field>
 
-      <mat-error *ngIf="apiError">
-        <small>No se ha podido iniciar sesión, inténtelo más tarde.</small>
-      </mat-error>
-
-      <mat-error *ngIf="authError">
-        <small>Correo electrónico o contraseña incorrectos.</small>
+      <mat-error *ngIf="authenticationService.errorMessage$ | async; let message">
+        <small>{{ message }}</small>
       </mat-error>
 
       <button mat-raised-button color="primary" class="submit-button" [disabled]="logInForm.invalid">
         Iniciar sesión
       </button>
+
+      <a [routerLink]="'/signup'">
+        Registrarse
+      </a>
 
     </form>
 
