--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -15,21 +15,20 @@
 </mat-toolbar>
 
 <div class="table-container">
-    <table *ngIf="filteredUsers; else errorBlock" mat-table [dataSource]="filteredUsers" class="mat-elevation-z8"
-        matSort>
+    <table *ngIf="filteredUsers; else errorBlock" mat-table [dataSource]="filteredUsers" class="mat-elevation-z8">
 
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+            <th mat-header-cell *matHeaderCellDef> Nombre </th>
             <td mat-cell *matCellDef="let user"> {{ user.name }} </td>
         </ng-container>
 
         <ng-container matColumnDef="age">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Edad </th>
+            <th mat-header-cell *matHeaderCellDef> Edad </th>
             <td mat-cell *matCellDef="let user"> {{ user.age }} </td>
         </ng-container>
 
         <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Correo electrónico </th>
+            <th mat-header-cell *matHeaderCellDef> Correo electrónico </th>
             <td mat-cell *matCellDef="let user"> {{ user.email }} </td>
         </ng-container>
 
